# polytree-settings

./: .gitignore  Cargo.toml  main.glade  main.ui  polytree-settings.pro  polytree-settings_ru_RU.ts
src/: main.rs
